frame/support/test/tests/pallet_ui/storage_pov_estimation_on_pallet.stderr
error: expected one of: `generate_store`, `without_storage_info`, `storage_version`
 --> tests/pallet_ui/storage_pov_estimation_on_pallet.rs:9:12
  |
9 |     #[pallet::pov_estimation = MaxEncodedLen]
  |               ^^^^^^^^^^^^
